showing one less item in rows to fix alignment in results

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -269,7 +269,7 @@ ul.artistUL{
 }
 
 .resultFromArtist{
-	flex: 1 0 33.33%;
+	flex: 1 0 50%;
 }
 
 .artistsBelow{
@@ -399,7 +399,7 @@ footer{
 		}
 	}
 	.resultFromArtist{
-		flex: 1 0 50%;
+		flex: 1 0 100%;
 	}
 }
 
